// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleConnect Mounts correctly with user creds and fires call to delete creds on click 1`] = `
<GoogleConnect
  userCreds={
    Array [
      0,
    ]
  }
>
  <div
    className="parameter-margin connected-account"
  >
    <p>
      <span
        className="t-f-blue"
        onClick={[Function]}
      >
        Disconnect
      </span>
       account
    </p>
  </div>
</GoogleConnect>
`;

exports[`GoogleConnect Mounts correctly without user creds 1`] = `
<GoogleConnect
  userCreds={Array []}
>
  <div
    className="parameter-margin connected-account"
  >
    <div
      className="gdrive-connectAccount"
    >
      <button
        className="action-button-M button-orange"
        onClick={[Function]}
      >
        Connect account
      </button>
    </div>
  </div>
</GoogleConnect>
`;
